chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-./03-common-programming-concept/05-control-flow
-./03-common-programming-concept/01-variable-and-mutability
-./03-common-programming-concept/02-data-types
-./03-common-programming-concept/03-how-functions-work
-./01-introduction/helloworld
-./02-guessing-game/guessing_game/target/debug/guessing_game
-./02-guessing-game/guessing_game/target/debug/deps/guessing_game-8eb7693526e71274
-./02-guessing-game/guessing_game/.git/hooks/README.sample
-./04-understanding-ownership/03-slices
-./04-understanding-ownership/02-references-and-borrowing
-./04-understanding-ownership/01-what-is-ownership
+03-common-programming-concept/05-control-flow
+03-common-programming-concept/01-variable-and-mutability
+03-common-programming-concept/02-data-types
+03-common-programming-concept/03-how-functions-work
+01-introduction/helloworld
+02-guessing-game/guessing_game/target/debug/guessing_game
+02-guessing-game/guessing_game/target/debug/deps/guessing_game-8eb7693526e71274
+02-guessing-game/guessing_game/.git/hooks/README.sample
+04-understanding-ownership/03-slices
+04-understanding-ownership/02-references-and-borrowing
+04-understanding-ownership/01-what-is-ownership
